// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationList renders the expected snapshot for a list with a single registration 1`] = `
Array [
  <article
    className="registrations-container"
    key="registrations-container"
  >
    <Localized
      id="serviceworker-list-header"
    >
      <h1
        className="app-page__title"
      />
    </Localized>
    <ul>
      <Worker
        isDebugEnabled={true}
        key="id-worker-1-example-0"
        worker={
          Object {
            "active": true,
            "id": "id-worker-1-example",
            "name": "worker1",
            "registrationFront": "",
            "scope": "SCOPE 123",
            "state": 0,
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
    </ul>
  </article>,
  <Localized
    a={
      <a
        className="aboutdebugging-plug__link"
        onClick={[Function]}
      />
    }
    id="serviceworker-list-aboutdebugging"
    key="serviceworkerlist-footer"
  >
    <footer
      className="aboutdebugging-plug"
    />
  </Localized>,
]
`;

exports[`RegistrationList renders the expected snapshot for a multiple registration list 1`] = `
Array [
  <article
    className="registrations-container"
    key="registrations-container"
  >
    <Localized
      id="serviceworker-list-header"
    >
      <h1
        className="app-page__title"
      />
    </Localized>
    <ul>
      <Worker
        isDebugEnabled={true}
        key="id-worker-1-example-0"
        worker={
          Object {
            "active": true,
            "id": "id-worker-1-example",
            "name": "worker1",
            "registrationFront": "",
            "scope": "SCOPE 123",
            "state": 0,
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
      <Worker
        isDebugEnabled={true}
        key="id-worker-2-example-0"
        worker={
          Object {
            "active": false,
            "id": "id-worker-2-example",
            "name": "worker2",
            "registrationFront": "",
            "scope": "SCOPE 456",
            "state": 0,
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
      <Worker
        isDebugEnabled={true}
        key="id-worker-3-example-0"
        worker={
          Object {
            "active": true,
            "id": "id-worker-3-example",
            "name": "worker3",
            "registrationFront": "",
            "scope": "SCOPE 789",
            "state": 0,
            "url": "http://example.com/worker.js",
            "workerTargetFront": "",
          }
        }
      />
    </ul>
  </article>,
  <Localized
    a={
      <a
        className="aboutdebugging-plug__link"
        onClick={[Function]}
      />
    }
    id="serviceworker-list-aboutdebugging"
    key="serviceworkerlist-footer"
  >
    <footer
      className="aboutdebugging-plug"
    />
  </Localized>,
]
`;
